# BoundMPC

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml
bound_mpc/: MANIFEST.in  package.xml  params.yaml  requirements.txt  setup.cfg  setup.py
bound_mpc/bound_mpc/BoundMPC/: BoundMPC.py  bound_mpc_functions.py  casadi_ocp_formulation.py  jerk_trajectory_casadi.py  mpc_utils_casadi.py
bound_mpc/bound_mpc/Logger/: Logger.py
bound_mpc/bound_mpc/Plotter/: Plotter.py  __init__.py
bound_mpc/bound_mpc/ReferencePath/: ReferencePath.py  __init__.py
bound_mpc/bound_mpc/RobotModel/: RobotModel.py  __init__.py
bound_mpc/bound_mpc/Rviz_Tools/: __init__.py  rviz_tools.py
bound_mpc/bound_mpc/utils/: __init__.py  lie_functions.py  path_utils.py  util_functions.py
bound_mpc/config/: config_exp1.rviz  config_exp2.rviz
bound_mpc/launch/: experiment1.launch.py  experiment2.launch.py  rviz.launch.py
bound_mpc/nodes/: bound_mpc_node.py  experiment1_runner.py  experiment2_runner.py
bound_mpc/urdf/: main.xacro
bound_mpc/urdf/Gripper/: GripperLowRes.STL
bound_mpc/urdf/body/: body.xacro  iiwa.gazebo.xacro  iiwa14.xacro  utilities.xacro
bound_mpc/urdf/body/meshes/iiwa14/collision/: link_0.dae  link_1.dae  link_4.dae  link_5.dae  link_5.stl  link_6.dae
bound_mpc/urdf/body/meshes/iiwa14/visual/: link_2.dae  link_3.dae
boundmpcmsg/: CMakeLists.txt  package.xml
boundmpcmsg/msg/: HandoverData.msg  HandoverLocation.msg  MPCData.msg  MujocoData.msg  Vector.msg
boundmpcmsg/srv/: MPCParams.srv  ResetMujoco.srv  Trajectory.srv
